# Rust-Rocket

./: .env  Cargo.toml  README.md  Rocket.toml  diesel.toml  docker-compose.yaml
doc/: Install-Cargo-Watch.md
migrations/2024-08-06-080911_create_users/: up.sql
src/: main.rs  models.rs  schema.rs  tests.rs
