[package]
name = "rust-rocket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.1",features = ["json"] }
diesel = { version = "2.2.2", features = ["postgres","r2d2"] }
dotenvy = "0.15.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0"

tokio = { version = "1", features = ["full"] }
rocket_sync_db_pools = { version = "0.1.0-rc.1", features = ["diesel_postgres_pool"] }


